--- a/style/style.less
+++ b/style/style.less
@@ -146,6 +146,22 @@ textarea{
 
 .flip-card-back{
     background-color: @primary-color;
+    color: @secondary-color;
+    overflow-y: scroll;
+    padding: 10px;
+}
+
+
+.flip-card-front>h3{
+    color: @secondary-color;
+    font-family: "Montserrat Underline";
+    text-align: center;
+}
+
+
+.flip-card-front>h5{
+    text-align: center;
+    color: @secondary-color;
 }
 
 @media screen and (max-width: 600px){
